Add Google Analytics

--- a/changelog.html
+++ b/changelog.html
@@ -27,10 +27,10 @@
 				</ul>
 			</div>
 		</div>
-		
+
 		<div class="container">
 			<h2>Version 0.1 <small>Released: 29.12.2012</small></h2>
-			
+
 			<h3>Quick fixes</h3>
 			<div class="row">
 				<div class="span8">
@@ -53,13 +53,13 @@
 						You can apply a quick fix to multiple violations of the same type at once if you use the context menu on a PMD problem in the Problems view and select the item "Quick Fix".
 					</p>
 				</div>
-					<ul class="thumbnails">
-						<li class="span4">
-							<a href="img/quickfix-problemsview.png" class="thumbnail" title="Apply a quick fix to multiple violations"> <img src="img/quickfix-problemsview.png" alt=""> </a>
-						</li>
-					</ul>
+				<ul class="thumbnails">
+					<li class="span4">
+						<a href="img/quickfix-problemsview.png" class="thumbnail" title="Apply a quick fix to multiple violations"> <img src="img/quickfix-problemsview.png" alt=""> </a>
+					</li>
+				</ul>
 			</div>
-			
+
 			<h3>Multiple PMD ruleset configurations</h3>
 			<div class="row">
 				<div class="span8">
@@ -73,7 +73,7 @@
 					</li>
 				</ul>
 			</div>
-			
+
 			<h3>Workspace and project PMD rule set configurations</h3>
 			<div class="row">
 				<div class="span8">
@@ -87,7 +87,7 @@
 					</li>
 				</ul>
 			</div>
-			
+
 			<h3>Support for additional languages</h3>
 			<div class="row">
 				<div class="span8">
@@ -102,7 +102,7 @@
 				</ul>
 			</div>
 		</div>
-		
+
 		<footer class="footer">
 			<div class="container">
 				<div class="row">
@@ -133,6 +133,20 @@
 			$(function() {
 				$('a.thumbnail').lightBox();
 			});
+		</script>
+		<script type="text/javascript">
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-37305934-1']);
+			_gaq.push(['_trackPageview']);
+
+			(function() {
+				var ga = document.createElement('script');
+				ga.type = 'text/javascript';
+				ga.async = true;
+				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+				var s = document.getElementsByTagName('script')[0];
+				s.parentNode.insertBefore(ga, s);
+			})();
 		</script>
 	</body>
 </html>
