--- a/getting-started.html
+++ b/getting-started.html
@@ -46,7 +46,7 @@
 		<div class="container">
 			<h2>Install</h2>
 			<p>
-				The recommeded way to install the plugin on Eclipse 3.7 (and later) is via the plugin update site <a href="http://www.acanda.ch/eclipse-pmd/release/latest">http://www.acanda.ch/eclipse-pmd/release/latest</a>.
+				The recommended way to install the plugin on Eclipse 3.7 (and later) is via the plugin update site <a href="http://www.acanda.ch/eclipse-pmd/release/latest">http://www.acanda.ch/eclipse-pmd/release/latest</a>.
 			</p>
 			<p>
 				<ol>
