--- a/changelog.html
+++ b/changelog.html
@@ -44,7 +44,12 @@
 		</div>
 
 		<div class="container">
-			<h2>eclipse-pmd 0.2 <small>Released: upcoming</small></h2>
+			<h2>eclipse-pmd 0.2</h2>
+			<p class="muted">
+				<small>Released: 29.01.2013</small>
+				<br />
+				<small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/0.2</small>
+			</p>
 			<h3>Quick fixes</h3>
 			<div class="row">
 				<div class="span8">
