Use local copy of jQuery

--- a/changelog.html
+++ b/changelog.html
@@ -221,7 +221,7 @@
 		<div id="forkme">
 			<a href="https://github.com/acanda/eclipse-pmd/">Fork me on GitHub</a>
 		</div>
-		<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+		<script src="js/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/jquery.lightbox.pack.js"></script>
 		<script type="text/javascript">
