--- a/changelog.html
+++ b/changelog.html
@@ -46,10 +46,23 @@
 		<div class="container">
 			<h2>eclipse-pmd 0.3</h2>
 			<p class="muted">
-				<small>Released: upcoming</small>
+				<small>Released: 2.3.2012</small>
 				<br />
-				<!--small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/0.3</small-->
+				<small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/0.3</small>
 			</p>
+			<h3>Suppress Warnings</h3>
+			<div class="row">
+				<div class="span8">
+					<p>
+						A new quick fix is available that adds a <code>@SuppressWarnings</code> annotation to suppress PMD warnings.
+					</p>
+				</div>
+				<ul class="thumbnails">
+					<li class="span4">
+						<a href="img/quickfix-suppresswarnings.png" class="thumbnail" title="Quick fix for adding a @SuppressWarnings annotation"> <img src="img/quickfix-suppresswarnings.png" alt=""> </a>
+					</li>
+				</ul>
+			</div>
 			<h3>PMD 5.0.2</h3>
 			<div class="row">
 				<div class="span8">
@@ -68,7 +81,7 @@
 			
 			<h2>eclipse-pmd 0.2</h2>
 			<p class="muted">
-				<small>Released: 29.01.2013</small>
+				<small>Released: 29.1.2013</small>
 				<br />
 				<small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/0.2</small>
 			</p>
