--- a/changelog.html
+++ b/changelog.html
@@ -44,6 +44,42 @@
 		</div>
 
 		<div class="container">
+			<h2>eclipse-pmd 0.4</h2>
+			<p class="muted">
+				<small>Release: 31.3.2013</small>
+				<br />
+				<small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/0.4</small>
+			</p>
+			<h3>Configure PMD Annotations</h3>
+			<div class="row">
+				<div class="span8">
+					<p>
+						This change adds preferences to configure style and colour of PMD annotations in text editors.
+						The <code>General > Editors > Text Editors > Annotations</code> preference page lists the PMD Violations annotation and allows setting its preference values.
+					</p>
+				</div>
+				<ul class="thumbnails">
+					<li class="span4">
+						<a href="img/annotation-preferences.png" class="thumbnail" title="Configure PMD Annotations"> <img src="img/annotation-preferences.png" alt=""> </a>
+					</li>
+				</ul>
+			</div>
+			<h3>Quick fixes</h3>
+			<div class="row">
+				<div class="span8">
+					<p>
+						New quick fixes are available for the following rules: DefaultLabelNotLastInSwitchStmt, EqualsNull, UseNotifyAllInsteadOfNotify, UseCollectionIsEmpty, SingularField.
+					</p>
+				</div>
+				<ul class="thumbnails">
+					<li class="span4">
+						<a href="img/quickfix-equalsnull.png" class="thumbnail" title="Quick fix for replacing x.equals(null) with x == null"> <img src="img/quickfix-equalsnull.png" alt=""> </a>
+					</li>
+				</ul>
+			</div>
+
+			<hr	/>
+			
 			<h2>eclipse-pmd 0.3</h2>
 			<p class="muted">
 				<small>Released: 2.3.2012</small>
