--- a/changelog.html
+++ b/changelog.html
@@ -44,6 +44,28 @@
 		</div>
 
 		<div class="container">
+			<h2>eclipse-pmd 0.5</h2>
+			<p class="muted">
+				<small>Release: 5.5.2013</small>
+				<br />
+				<small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/0.5</small>
+			</p>
+			<h3>PMD 5.0.4</h3>
+			<div class="row">
+				<div class="span8">
+					<p>
+						The embedded PMD has been updated to version 5.0.4.
+					</p>
+				</div>
+				<ul class="thumbnails">
+					<li class="span4">
+						<a href="#pmd-release-notes" class="thumbnail" title="PMD 5.0.4 Release Notes" data-toggle="modal" data-remote="releasenote-pmd-5.0.4.txt"> <img src="img/pmd-5.0.4-release-notes.png" alt=""> </a>
+					</li>
+				</ul>
+			</div>
+
+			<hr	/>
+			
 			<h2>eclipse-pmd 0.4</h2>
 			<p class="muted">
 				<small>Release: 31.3.2013</small>
