--- a/changelog.html
+++ b/changelog.html
@@ -44,6 +44,28 @@
 		</div>
 
 		<div class="container">
+			<h2>eclipse-pmd 0.6</h2>
+			<p class="muted">
+				<small>Release: 9.6.2013</small>
+				<br />
+				<small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/0.6</small>
+			</p>
+			<h3>Remote PMD rule set configurations</h3>
+			<div class="row">
+				<div class="span8">
+					<p>
+						eclipse-pmd supports PMD rule set configurations stored at a remote location. Use this type if you have a rule set configuration file that is only available via an URI. 
+					</p>
+				</div>
+				<ul class="thumbnails">
+					<li class="span4">
+						<a href="img/remote-configuration.png" class="thumbnail" title="Remote"> <img src="img/remote-configuration.png" alt=""> </a>
+					</li>
+				</ul>
+			</div>
+
+			<hr	/>
+			
 			<h2>eclipse-pmd 0.5</h2>
 			<p class="muted">
 				<small>Release: 5.5.2013</small>
