--- a/getting-started.html
+++ b/getting-started.html
@@ -12,7 +12,7 @@
 		<!--[if lt IE 9]>
 		<script src="js/html5shiv.js"></script>
 		<![endif]-->
-		
+
 		<script type="text/javascript">
 			var _gaq = _gaq || [];
 			_gaq.push(['_setAccount', 'UA-37305934-1']);
@@ -45,8 +45,14 @@
 
 		<div class="container">
 			<h2>Install</h2>
+			
+			<h3>Eclipse Marketplace</h3>
+			The recommended way to install the plugin on Eclipse 3.7 (and later) is to drag and drop the following button into a running Eclipse workspace: 
+			<a href="http://marketplace.eclipse.org/marketplace-client-intro?mpc_install=932046" title="Drag and drop into a running Eclipse workspace to install eclipse-pmd"> <img src="https://marketplace.eclipse.org/sites/all/modules/custom/marketplace/images/installbutton.png"/> </a>
+
+			<h3>Update Site</h3>
 			<p>
-				The recommended way to install the plugin on Eclipse 3.7 (and later) is via the plugin update site <a href="http://www.acanda.ch/eclipse-pmd/release/latest">http://www.acanda.ch/eclipse-pmd/release/latest</a>.
+				An alternative way to install the plugin on Eclipse 3.7 (and later) is via the plugin update site <a href="http://www.acanda.ch/eclipse-pmd/release/latest">http://www.acanda.ch/eclipse-pmd/release/latest</a>.
 			</p>
 			<p>
 				<ol>
