--- a/changelog.html
+++ b/changelog.html
@@ -44,6 +44,41 @@
 		</div>
 
 		<div class="container">
+			<h2>eclipse-pmd 0.7</h2>
+			<p class="muted">
+				<small>Release: 21.9.2013</small>
+				<br />
+				<small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/0.7</small>
+			</p>
+			<h3>Quick fixes</h3>
+			<div class="row">
+				<div class="span8">
+					<p>
+						New quick fixes are available for the following rules: AppendCharacterWithChar, UseIndexOfChar, StringToString.
+					</p>
+				</div>
+				<ul class="thumbnails">
+					<li class="span4">
+						<a href="img/quickfix-appendwithchar.png" class="thumbnail" title="Quick fix for replacing buffer.append(&quot;a&quot;) with buffer.append('a')"> <img src="img/quickfix-appendwithchar.png" alt=""> </a>
+					</li>
+				</ul>
+			</div>
+
+			<h3>PMD 5.0.5</h3>
+			<div class="row">
+				<div class="span8">
+					<p>
+						The embedded PMD has been updated to version 5.0.5.
+					</p>
+				</div>
+				<ul class="thumbnails">
+					<li class="span4">
+						<a href="#pmd-release-notes" class="thumbnail" title="PMD 5.0.5 Release Notes" data-toggle="modal" data-remote="releasenote-pmd-5.0.5.txt"> <img src="img/pmd-5.0.5-release-notes.png" alt=""> </a>
+					</li>
+				</ul>
+			</div>
+
+			<hr	/>
 			<h2>eclipse-pmd 0.6</h2>
 			<p class="muted">
 				<small>Release: 9.6.2013</small>
@@ -54,7 +89,7 @@
 			<div class="row">
 				<div class="span8">
 					<p>
-						eclipse-pmd supports PMD rule set configurations stored at a remote location. Use this type if you have a rule set configuration file that is only available via an URI. 
+						eclipse-pmd supports PMD rule set configurations stored at a remote location. Use this type if you have a rule set configuration file that is only available via an URI.
 					</p>
 				</div>
 				<ul class="thumbnails">
@@ -65,7 +100,7 @@
 			</div>
 
 			<hr	/>
-			
+
 			<h2>eclipse-pmd 0.5</h2>
 			<p class="muted">
 				<small>Release: 5.5.2013</small>
@@ -87,7 +122,7 @@
 			</div>
 
 			<hr	/>
-			
+
 			<h2>eclipse-pmd 0.4</h2>
 			<p class="muted">
 				<small>Release: 31.3.2013</small>
@@ -99,7 +134,7 @@
 				<div class="span8">
 					<p>
 						This change adds preferences to configure style and colour of PMD annotations in text editors.
-						The <code>General > Editors > Text Editors > Annotations</code> preference page lists the PMD Violations annotation and allows setting its preference values.
+						The <code>General > Editors > Text Editors > Annotations</code>	preference page lists the PMD Violations annotation and allows setting its preference values.
 					</p>
 				</div>
 				<ul class="thumbnails">
@@ -123,7 +158,7 @@
 			</div>
 
 			<hr	/>
-			
+
 			<h2>eclipse-pmd 0.3</h2>
 			<p class="muted">
 				<small>Released: 2.3.2012</small>
@@ -134,7 +169,7 @@
 			<div class="row">
 				<div class="span8">
 					<p>
-						A new quick fix is available that adds a <code>@SuppressWarnings</code> annotation to suppress PMD warnings.
+						A new quick fix is available that adds a <code>@SuppressWarnings</code>	annotation to suppress PMD warnings.
 					</p>
 				</div>
 				<ul class="thumbnails">
@@ -158,7 +193,7 @@
 			</div>
 
 			<hr	/>
-			
+
 			<h2>eclipse-pmd 0.2</h2>
 			<p class="muted">
 				<small>Released: 29.1.2013</small>
@@ -169,7 +204,7 @@
 			<div class="row">
 				<div class="span8">
 					<p>
-						New quick fixes are available for the following rules: EmptyIfStmt, EmptyWhileStmt, EmptyTryBlock, EmptyFinallyBlock, EmptySwitchStatements, 
+						New quick fixes are available for the following rules: EmptyIfStmt, EmptyWhileStmt, EmptyTryBlock, EmptyFinallyBlock, EmptySwitchStatements,
 						EmptySynchronizedBlock, EmptyInitializer, EmptyStatementBlock, EmptyStaticInitializer, EmptyStatementNotInLoop, RedundantFieldInitializer,
 						SimplifyStartsWith.
 					</p>
@@ -195,7 +230,7 @@
 			</div>
 
 			<hr	/>
-			
+
 			<h2>eclipse-pmd 0.1</h2>
 			<p class="muted">
 				<small>Released: 28.12.2012</small>
@@ -302,15 +337,14 @@
 				</button>
 				<h3 id="pmd-501-release-notes-label">PMD Release Notes</h3>
 			</div>
-			<div class="modal-body" style="white-space: pre-line;">
-			</div>
+			<div class="modal-body" style="white-space: pre-line;"></div>
 			<div class="modal-footer">
 				<button class="btn btn-primary" data-dismiss="modal" aria-hidden="true">
 					Close
 				</button>
 			</div>
 		</div>
-	  
+
 		<div id="forkme">
 			<a href="https://github.com/acanda/eclipse-pmd/">Fork me on GitHub</a>
 		</div>
