--- a/changelog.html
+++ b/changelog.html
@@ -101,6 +101,19 @@
                 </ul>
             </div>
 
+            <h3>eclipse-pmd 0.8.1</h3>
+            <p class="muted">
+                <small>Release: 8.2.2014</small>
+            </p>
+            <div class="row">
+                <div class="span8">
+                    <p>
+                        This micro release fixes a critical bug in version 0.8 which prevents the project property dialog from being
+                        opened when Eclipse runs on the early access version of Oracle's JDK 8.
+                    </p>
+                </div>
+            </div>
+
             <hr />
 
             <h2>eclipse-pmd 0.7</h2>
