--- a/changelog.html
+++ b/changelog.html
@@ -79,6 +79,18 @@
                 </div>
             </div>
            
+            <h3>eclipse-pmd 1.0.2</h3>
+            <p class="muted">
+                <small>Release: 13.7.2014</small>
+            </p>
+            <div class="row">
+                <div class="span8">
+                    <p>
+                        This release fixes a bug in version 1.0.1 which prevents eclipse-pmd from analysing Apache Velocity templates.
+                    </p>
+                </div>
+            </div>
+           
            <hr	/>
 
             <h2>eclipse-pmd 0.9</h2>
