--- a/changelog.html
+++ b/changelog.html
@@ -80,6 +80,18 @@
                 </ul>
             </div>
 
+            <h3>eclipse-pmd 1.1.1</h3>
+            <p class="muted">
+                <small>Release: 15.8.2014</small>
+            </p>
+            <div class="row">
+                <div class="span8">
+                    <p>
+                        This release fixes a bug in version 1.1 which prevents eclipse-pmd from executing the Java rules OneDeclarationPerLine and AvoidLiteralsInIfCondition.
+                    </p>
+                </div>
+            </div>
+
             <hr />
 
             <h2>eclipse-pmd 1.0</h2>
