--- a/changelog.html
+++ b/changelog.html
@@ -45,6 +45,58 @@
 
         <div class="container">
 
+            <h2>eclipse-pmd 1.5</h2>
+            <p class="muted">
+                <small>Release: 23.5.2015</small>
+                <br />
+                <small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/1.5</small>
+            </p>
+
+            <h3>Mark invalid rule sets</h3>
+            <div class="row">
+                <div class="span8">
+                    <p>
+                        Invalid rule sets are marked in the PMD property page with an icon.
+                    </p>
+                </div>
+                <ul class="thumbnails">
+                    <li class="span4">
+                        <a href="img/mark-invalid-rule-sets.png" class="thumbnail" title="Invalid rule sets are marked"> <img src="img/mark-invalid-rule-sets.png" alt=""> </a>
+                    </li>
+                </ul>
+            </div>
+
+            <h3>Quick fixes</h3>
+            <div class="row">
+                <div class="span8">
+                    <p>
+                        New quick fixes are available for the following rules: UseUtilityClass.
+                    </p>
+                </div>
+                <ul class="thumbnails">
+                    <li class="span4">
+                        <a href="img/quickfix-useutilityclass.png" class="thumbnail" title="Quick fix for converting a class into an utility class"> <img src="img/quickfix-useutilityclass.png" alt=""> </a>
+                    </li>
+                </ul>
+            </div>
+
+
+            <h3>PMD 5.3.2</h3>
+            <div class="row">
+                <div class="span8">
+                    <p>
+                        The embedded PMD has been updated to version 5.3.2.
+                    </p>
+                </div>
+                <ul class="thumbnails">
+                    <li class="span4">
+                        <a href="#pmd-release-notes" class="thumbnail" title="PMD 5.3.2 Release Notes" data-toggle="modal" data-remote="releasenote-pmd-5.3.2.txt"> <img src="img/pmd-5.3.2-release-notes.png" alt=""> </a>
+                    </li>
+                </ul>
+            </div>
+
+            <hr/>
+
             <h2>eclipse-pmd 1.4</h2>
             <p class="muted">
                 <small>Release: 21.12.2014</small>
@@ -597,7 +649,7 @@
                 <div class="row">
                     <div class="span4">
                         <p>
-                            &copy; 2012 &ndash; 2014 Philip Graf. All Rights Reserved.
+                            &copy; 2012 &ndash; 2015 Philip Graf. All Rights Reserved.
                             <br />
                             eclipse-pmd uses <a href="http://pmd.sourceforge.net/">PMD</a>.
                         </p>
