Update link to PMD (from sourceforge to github)

--- a/website/src/html/getting-started.html
+++ b/website/src/html/getting-started.html
@@ -108,7 +108,7 @@
 						<p>
 							&copy; 2012 &ndash; ${build-year} Philip Graf. All Rights Reserved.
 							<br />
-							eclipse-pmd uses <a href="http://pmd.sourceforge.net/">PMD</a>.
+							eclipse-pmd uses <a href="https://pmd.github.io/">PMD</a>.
 						</p>
 					</div>
 					<div class="span4 offset4">
