--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 						<p>
 							&copy; 2012 &ndash; 2015 Philip Graf. All Rights Reserved.
 							<br />
-							eclipse-pmd uses <a href="http://pmd.sourceforge.net/">PMD</a>.
+							eclipse-pmd uses <a href="https://pmd.github.io/">PMD</a>.
 						</p>
 					</div>
 					<div class="span4 offset4">
