--- a/website/src/html/changelog.html
+++ b/website/src/html/changelog.html
@@ -66,6 +66,20 @@
                 </ul>
             </div>
 
+            <h3>PMD 5.3.3</h3>
+            <div class="row">
+                <div class="span8">
+                    <p>
+                        The embedded PMD has been updated to version 5.3.3.
+                    </p>
+                </div>
+                <ul class="thumbnails">
+                    <li class="span4">
+                        <a href="#pmd-release-notes" class="thumbnail" title="PMD 5.3.3 Release Notes" data-toggle="modal" data-remote="releasenote-pmd-5.3.3.txt"> <img src="img/pmd-5.3.3-release-notes.png" alt=""> </a>
+                    </li>
+                </ul>
+            </div>
+
             <hr/>
 
             <h2>eclipse-pmd 1.5</h2>
