Set date for release 1.6

--- a/website/src/html/changelog.html
+++ b/website/src/html/changelog.html
@@ -47,7 +47,7 @@
 
             <h2>eclipse-pmd 1.6</h2>
             <p class="muted">
-                <small>Release: x.x.2015</small>
+                <small>Release: 26.7.2015</small>
                 <br />
                 <small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/1.6</small>
             </p>
