--- a/changelog.html
+++ b/changelog.html
@@ -45,6 +45,43 @@
 
         <div class="container">
 
+            <h2>eclipse-pmd 1.6</h2>
+            <p class="muted">
+                <small>Release: 26.7.2015</small>
+                <br />
+                <small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/1.6</small>
+            </p>
+
+            <h3>Quick fixes</h3>
+            <div class="row">
+                <div class="span8">
+                    <p>
+                        New quick fixes are available for the following rules: MethodReturnsInternalArray.
+                    </p>
+                </div>
+                <ul class="thumbnails">
+                    <li class="span4">
+                        <a href="img/quickfix-methodreturnsinternalarray.png" class="thumbnail" title="Quick fix for returning a clone of an array instead of the array itself"> <img src="img/quickfix-methodreturnsinternalarray.png" alt=""> </a>
+                    </li>
+                </ul>
+            </div>
+
+            <h3>PMD 5.3.3</h3>
+            <div class="row">
+                <div class="span8">
+                    <p>
+                        The embedded PMD has been updated to version 5.3.3.
+                    </p>
+                </div>
+                <ul class="thumbnails">
+                    <li class="span4">
+                        <a href="#pmd-release-notes" class="thumbnail" title="PMD 5.3.3 Release Notes" data-toggle="modal" data-remote="releasenote-pmd-5.3.3.txt"> <img src="img/pmd-5.3.3-release-notes.png" alt=""> </a>
+                    </li>
+                </ul>
+            </div>
+
+            <hr/>
+
             <h2>eclipse-pmd 1.5</h2>
             <p class="muted">
                 <small>Release: 23.5.2015</small>
