--- a/website/src/html/changelog.html
+++ b/website/src/html/changelog.html
@@ -45,6 +45,29 @@
 
         <div class="container">
 
+            <h2>eclipse-pmd 1.7</h2>
+            <p class="muted">
+                <small>Release: x.x.2015</small>
+                <br />
+                <small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/1.7</small>
+            </p>
+
+            <h3>Quick fixes</h3>
+            <div class="row">
+                <div class="span8">
+                    <p>
+                        New quick fixes are available for the following rules: AddEmptyString.
+                    </p>
+                </div>
+                <ul class="thumbnails">
+                    <li class="span4">
+                        <a href="img/quickfix-addemptystring.png" class="thumbnail" title="Quick fix for removeing the empty string"> <img src="img/quickfix-addemptystring.png" alt=""> </a>
+                    </li>
+                </ul>
+            </div>
+            
+            <hr/>
+
             <h2>eclipse-pmd 1.6</h2>
             <p class="muted">
                 <small>Release: 26.7.2015</small>
