--- a/website/src/html/changelog.html
+++ b/website/src/html/changelog.html
@@ -56,7 +56,7 @@
             <div class="row">
                 <div class="span8">
                     <p>
-                        New quick fixes are available for the following rules: AddEmptyString.
+                        New quick fixes are available for the following rules: AddEmptyString, UseVarargs.
                     </p>
                 </div>
                 <ul class="thumbnails">
@@ -65,7 +65,7 @@
                     </li>
                 </ul>
             </div>
-            
+
             <hr/>
 
             <h2>eclipse-pmd 1.6</h2>
@@ -139,7 +139,6 @@
                     </li>
                 </ul>
             </div>
-
 
             <h3>PMD 5.3.2</h3>
             <div class="row">
