--- a/website/src/html/changelog.html
+++ b/website/src/html/changelog.html
@@ -56,7 +56,7 @@
             <div class="row">
                 <div class="span8">
                     <p>
-                        New quick fixes are available for the following rules: AddEmptyString, UseVarargs.
+                        New quick fixes are available for the following rules: AddEmptyString, UseVarargs, UnnecessaryCaseChange.
                     </p>
                 </div>
                 <ul class="thumbnails">
