--- a/website/src/html/changelog.html
+++ b/website/src/html/changelog.html
@@ -47,7 +47,7 @@
 
             <h2>eclipse-pmd 1.7</h2>
             <p class="muted">
-                <small>Release: x.x.2015</small>
+                <small>Release: 1.11.2015</small>
                 <br />
                 <small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/1.7</small>
             </p>
@@ -62,6 +62,20 @@
                 <ul class="thumbnails">
                     <li class="span4">
                         <a href="img/quickfix-addemptystring.png" class="thumbnail" title="Quick fix for removeing the empty string"> <img src="img/quickfix-addemptystring.png" alt=""> </a>
+                    </li>
+                </ul>
+            </div>
+
+            <h3>PMD 5.4.0</h3>
+            <div class="row">
+                <div class="span8">
+                    <p>
+                        The embedded PMD has been updated to version 5.4.0.
+                    </p>
+                </div>
+                <ul class="thumbnails">
+                    <li class="span4">
+                        <a href="#pmd-release-notes" class="thumbnail" title="PMD 5.4.0 Release Notes" data-toggle="modal" data-remote="releasenote-pmd-5.4.0.txt"> <img src="img/pmd-5.4.0-release-notes.png" alt=""> </a>
                     </li>
                 </ul>
             </div>
