Update website for release 1.8

--- a/website/src/html/changelog.html
+++ b/website/src/html/changelog.html
@@ -47,7 +47,7 @@
 
             <h2>eclipse-pmd 1.8</h2>
             <p class="muted">
-                <small>Release: x.12.2015</small>
+                <small>Release: 6.12.2015</small>
                 <br />
                 <small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/1.8</small>
             </p>
