--- a/website/src/html/changelog.html
+++ b/website/src/html/changelog.html
@@ -45,6 +45,29 @@
 
         <div class="container">
 
+            <h2>eclipse-pmd 1.9</h2>
+            <p class="muted">
+                <small>Release: xx.yy.2016</small>
+                <br />
+                <small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/1.9</small>
+            </p>
+
+            <h3>PMD 5.4.2</h3>
+            <div class="row">
+                <div class="span8">
+                    <p>
+                        The embedded PMD has been updated to version 5.4.2.
+                    </p>
+                </div>
+                <ul class="thumbnails">
+                    <li class="span4">
+                        <a href="#pmd-release-notes" class="thumbnail" title="PMD 5.4.2 Release Notes" data-toggle="modal" data-remote="releasenote-pmd-5.4.2.txt"> <img src="img/pmd-5.4.2-release-notes.png" alt=""> </a>
+                    </li>
+                </ul>
+            </div>
+
+            <hr/>
+
             <h2>eclipse-pmd 1.8</h2>
             <p class="muted">
                 <small>Release: 6.12.2015</small>
