--- a/website/src/html/getting-started.html
+++ b/website/src/html/getting-started.html
@@ -77,7 +77,7 @@
 			<p>
 				<ol>
 					<li>
-						If you don't already have a PMD rule set then <a href="http://pmd.sourceforge.net/pmd-5.0.0/howtomakearuleset.html">create a new one</a>.
+						If you don't already have a PMD rule set then <a href="http://pmd.github.io/pmd-${pmd-version}/customizing/howtomakearuleset.html">create a new one</a>.
 					</li>
 					<li>
 						Open the property dialog of your project.
