Add "Exclude files in derived folders" to changelog

--- a/website/src/html/changelog.html
+++ b/website/src/html/changelog.html
@@ -52,6 +52,23 @@
                 <small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/1.9</small>
             </p>
 
+            <h3>Exclude files in derived folders</h3>
+            <div class="row">
+                <div class="span8">
+                    <p>
+                        Until now eclipse-pmd did exclude files that were marked as derived but 
+                        not files that had only one of its parent folders marked as derived but
+                        were not marked themselves. Now it is enough to mark a folder as derived
+                        and eclipse-pmd will exclude all of its files.
+                    </p>
+                </div>
+                <ul class="thumbnails">
+                    <li class="span4">
+                        <a href="img/exclude-derived-folder.png" class="thumbnail" title="Exclude files in derived folders"> <img src="img/exclude-derived-folder.png" alt=""> </a>
+                    </li>
+                </ul>
+            </div>
+
             <h3>PMD 5.4.2</h3>
             <div class="row">
                 <div class="span8">
