--- a/website/src/html/changelog.html
+++ b/website/src/html/changelog.html
@@ -47,7 +47,7 @@
 
             <h2>eclipse-pmd 1.9</h2>
             <p class="muted">
-                <small>Release: xx.yy.2016</small>
+                <small>Release: 26.6.2016</small>
                 <br />
                 <small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/1.9</small>
             </p>
@@ -69,16 +69,16 @@
                 </ul>
             </div>
 
-            <h3>PMD 5.4.2</h3>
+            <h3>PMD 5.5.0</h3>
             <div class="row">
                 <div class="span8">
                     <p>
-                        The embedded PMD has been updated to version 5.4.2.
+                        The embedded PMD has been updated to version 5.5.0.
                     </p>
                 </div>
                 <ul class="thumbnails">
                     <li class="span4">
-                        <a href="#pmd-release-notes" class="thumbnail" title="PMD 5.4.2 Release Notes" data-toggle="modal" data-remote="releasenote-pmd-5.4.2.txt"> <img src="img/pmd-5.4.2-release-notes.png" alt=""> </a>
+                        <a href="#pmd-release-notes" class="thumbnail" title="PMD 5.5.0 Release Notes" data-toggle="modal" data-remote="releasenote-pmd-5.5.0.txt"> <img src="img/pmd-5.5.0-release-notes.png" alt=""> </a>
                     </li>
                 </ul>
             </div>
