Update website for release 1.9

--- a/website/src/html/changelog.html
+++ b/website/src/html/changelog.html
@@ -47,7 +47,7 @@
 
             <h2>eclipse-pmd 1.9</h2>
             <p class="muted">
-                <small>Release: x.x.2017</small>
+                <small>Release: 29.5.2017</small>
                 <br />
                 <small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/1.9</small>
             </p>
