--- a/getting-started.html
+++ b/getting-started.html
@@ -77,7 +77,7 @@
 			<p>
 				<ol>
 					<li>
-						If you don't already have a PMD rule set then <a href="http://pmd.sourceforge.net/pmd-5.0.0/howtomakearuleset.html">create a new one</a>.
+						If you don't already have a PMD rule set then <a href="http://pmd.github.io/pmd-5.7.0/customizing/howtomakearuleset.html">create a new one</a>.
 					</li>
 					<li>
 						Open the property dialog of your project.
@@ -106,7 +106,7 @@
 				<div class="row">
 					<div class="span4">
 						<p>
-							&copy; 2012 &ndash; 2015 Philip Graf. All Rights Reserved.
+							&copy; 2012 &ndash; 2017 Philip Graf. All Rights Reserved.
 							<br />
 							eclipse-pmd uses <a href="https://pmd.github.io/">PMD</a>.
 						</p>
