--- a/website/src/html/changelog.html
+++ b/website/src/html/changelog.html
@@ -47,7 +47,7 @@
 
             <h2>eclipse-pmd 1.11</h2>
             <p class="muted">
-                <small>Release: x.x.2018</small>
+                <small>Release: 2.4.2018</small>
                 <br />
                 <small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/1.11</small>
             </p>
