--- a/changelog.html
+++ b/changelog.html
@@ -45,6 +45,29 @@
 
         <div class="container">
 
+            <h2>eclipse-pmd 1.11</h2>
+            <p class="muted">
+                <small>Release: 2.4.2018</small>
+                <br />
+                <small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/1.11</small>
+            </p>
+
+            <h3>PMD 6.2.0</h3>
+            <div class="row">
+                <div class="span8">
+                    <p>
+                        The embedded PMD has been updated to version 6.2.0.
+                    </p>
+                </div>
+                <ul class="thumbnails">
+                    <li class="span4">
+                        <a href="#pmd-release-notes" class="thumbnail" title="PMD 6.2.0 Release Notes" data-toggle="modal" data-remote="releasenote-pmd-6.2.0.txt"> <img src="img/pmd-6.2.0-release-notes.png" alt=""> </a>
+                    </li>
+                </ul>
+            </div>
+
+            <hr/>
+
             <h2>eclipse-pmd 1.10</h2>
             <p class="muted">
                 <small>Release: 4.7.2017</small>
@@ -808,7 +831,7 @@
                 <div class="row">
                     <div class="span4">
                         <p>
-                            &copy; 2012 &ndash; 2017 Philip Graf. All Rights Reserved.
+                            &copy; 2012 &ndash; 2018 Philip Graf. All Rights Reserved.
                             <br />
                             eclipse-pmd uses <a href="https://pmd.github.io/">PMD</a>.
                         </p>
