--- a/getting-started.html
+++ b/getting-started.html
@@ -70,6 +70,31 @@
 					</li>
 				</ol>
 			</p>
+
+			<h3>Offline Installation</h3>
+			<p>
+				If you do not have access to the internet you can download the plugin as a zip file and install it manually.
+			</p>
+			<p>
+				<ol>
+					<li>
+						Download the latest zip file from <a href="https://github.com/acanda/eclipse-pmd/releases">https://github.com/acanda/eclipse-pmd/releases</a> and copy it to your offline computer.
+					</li>
+					<li>
+						In Eclipse go to <strong>Help</strong> > <strong>Install new software...</strong>
+					</li>
+					<li>
+						Add a new installation site and click the button <strong>Archive...</strong> to select to zip file you downloaded.
+					</li>
+					<li>
+						Select the plugin <strong>Eclipse PMD</strong>.
+					</li>
+					<li>
+						Finish the installation by accepting the license and restarting Eclipse.
+					</li>
+				</ol>
+			</p>
+
 			<h2>Activate</h2>
 			<p>
 				Use the property dialog of your project(s) to activate eclipse-pmd.
