Make Eclipse Neon and Java 8 a minimum requirement

--- a/website/src/html/getting-started.html
+++ b/website/src/html/getting-started.html
@@ -48,7 +48,7 @@
 			
 			<h3>Minimum Requirements</h3>
 			<p>
-			The plugin requires Eclipse 4.4 Luna or later running with Java 8 or later.
+			The plugin requires Eclipse 4.6 Neon or later running with Java 8 or later.
 			</p>
 			
 			<h3>Eclipse Marketplace</h3>
