Update PMD to version 6.19.0

--- a/website/src/html/changelog.html
+++ b/website/src/html/changelog.html
@@ -45,6 +45,29 @@
 
         <div class="container">
 
+            <h2>eclipse-pmd 1.24</h2>
+            <p class="muted">
+                <small>Release: 3.11.2019</small>
+                <br />
+                <small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/1.24</small>
+            </p>
+
+            <h3>PMD 6.19.0</h3>
+            <div class="row">
+                <div class="span8">
+                    <p>
+                        The embedded PMD has been updated to version 6.19.0 (except for the Scala rules which are still at version 6.17.0 due to an issue with a dependency).
+                    </p>
+                </div>
+                <ul class="thumbnails">
+                    <li class="span4">
+                        <a href="#pmd-release-notes" class="thumbnail" title="PMD 6.19.0 Release Notes" data-toggle="modal" data-remote="releasenote-pmd-6.19.0.txt"> <img src="img/pmd-6.19.0-release-notes.png" alt=""> </a>
+                    </li>
+                </ul>
+            </div>
+
+            <hr/>
+
             <h2>eclipse-pmd 1.23</h2>
             <p class="muted">
                 <small>Release: 7.10.2019</small>
